[package]
name = "ordo"
version = "0.1.1"
edition = "2018"

authors = ["Don McCaughey <don@donm.cc>"]
description = "Latin language utility library for Rust."
keywords = ["Latin", "lingua-Latina", "Roman-numerals"]
readme = "README.md"
repository = "https://github.com/donmccaughey/ordo"
license = "BSD-2-Clause"
exclude = [".gitignore", ".github/*", ".idea/*"]

[dependencies]
